deployment-canary.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app-deployment-canary
  labels:
    app: my-spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-spring-app
  template:
    metadata:
      labels:
        app: my-spring-app
    spec:
      containers:
        - name: spring-app
          image: spring-app:v4-canary
          ports:
            - containerPort: 8080
