ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-spring-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /my-spring-app
            pathType: Prefix
            backend:
              service:
                name: my-spring-app-service
                port:
                  number: 8080
